fixed download resume overflow issue. Made skills responsive on smaller screens. fixed clip-path issue on smaller screens. On ptojects when on smaller screens show the live and demo buttom

--- a/style.scss
+++ b/style.scss
@@ -52,6 +52,7 @@
 ========================*/
 body {
   font-family: 'Nunito', sans-serif;
+  overflow-x: hidden;
 
 }
 h1,
@@ -585,7 +586,7 @@ canvas{
 
 .download-resume{
   padding: 0;
-  top: -50px;
+  top: -40px;
 
 }
 
@@ -604,7 +605,7 @@ canvas{
   span{
 
       i{
-      display: inline;
+      display: block;
         font-size: 30px;
         z-index: 200;
         position: relative;
@@ -729,4 +730,73 @@ canvas{
   .header-name {
       font-size: 38px;
   }
+
+
+  
 }
+
+
+@media (min-width: 200px) and (max-width: 990px) {
+  .background-custom{
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 0, 50% 3%);
+  }
+
+  .btn-download{
+    font-size: 15px;
+  }
+
+}
+
+
+@media (min-width: 200px) and (max-width: 770px) {
+  .about-social {
+
+    width: 100%;
+  
+    display: flex;
+    justify-content: space-between;
+
+     li a {
+      color: #555;
+      display: inline-block;
+      height: 35px;
+      width: 35px;
+      font-size: 25px;
+      border-radius: 50%;
+      border: 2px solid #d4d4d4;
+      line-height: 32px;
+      transition: all 0.5s;
+      text-align: center;
+      cursor: initial;
+    }
+  }
+  .work_box .work_detail p {
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 14px;
+  
+  }
+  .work_box .work_detail {
+    top: 50%;
+    transform: translate(0, -50%);
+    opacity: 1;
+  }
+  .work_box .work_img:after {
+    background: rgba(0, 0, 0, 0.8);
+  }
+  .work_box .work_img > img {
+    transform: scale(1.05);
+  }
+
+  #about{
+    padding-top: 70px;
+  }
+
+  .btn-download{
+    font-size: 10px;
+  }
+
+}
+
+
+
+
